--- a/src/components/FooterDescription/_media.scss
+++ b/src/components/FooterDescription/_media.scss
@@ -88,99 +88,99 @@
 }
 
 
-// // Media query for very small screens (mobile)
-// @media screen and (max-width: 500px) and (max-height: 500px) {
-
-//     // Footer content
-//     .footer_container {
-//         // width: 100%;
-//         // color: var(--popup-text-description-color);
-//         padding: .5rem .15rem .25rem 0rem;
-//         // display: flex;
-//         // align-items: flex-start;
-//         // justify-content: center;
-//         // flex-direction: column;
-//         gap: .25rem;
-//         font-size: .525rem;
-//         line-height: .75rem;
-
-//         // .footer_api_description {
-
-//         //     p {
-//         //         // margin: 0;
-
-//         //         a {
-//         //             // color: var(--popup-text-description-color);
-//         //         }
-//         //     }
-//         // }
-
-//         // .footer_design_description {
-
-//         //     p {
-//         //         margin: 0;
-
-//         //         a {
-//         //             color: var(--popup-text-description-color);
-//         //         }
-//         //     }
-//         // }
-
-//         .footer_text_description {
-//             // display: flex;
-//             // align-items: flex-start;
-//             // justify-content: center;
-//             // flex-direction: column;
-//             gap: .35rem;
-
-//             .footer_text {
-//                 p {
-//                     // margin: 0;
-//                     letter-spacing: .01rem;
-//                     word-spacing: .025rem;
-//                     font-size: .525rem;
-//                     // color: var(--popup-text-description-color);
-//                 }
-//             }
-
-//             .footer_icon_container {
-//                 // display: flex;
-//                 // align-items: center;
-//                 // justify-content: center;
-//                 gap: .5rem;
-
-//                 a {
-//                     // display: flex;
-//                     // align-items: center;
-//                     // justify-content: center;
-//                     width: 1rem;
-//                     height: 1rem;
-//                     padding: 0;
-//                     // transition: all .2s ease-in-out;
-//                     // text-decoration: none;
-
-//                     i {
-//                         // color: var(--extra-menu-icon-color);
-//                         font-size: .775rem;
-//                         // transition: all .2s ease;
-//                     }
-
-//                     &:hover {
-
-//                         i {
-//                             color: var(--extra-menu-icon-color);
-//                             translate: 0 0;
-//                         }
-//                     }
-//                 }
-//             }
-//         }
-//     }
-// }
-
-// For 300px height
-// Media query for very small screens (mobile)
+// Media query for small screens (mobile)
 @media screen and (max-width: 500px) and (max-height: 500px) {
+
+    // Footer content
+    .footer_container {
+        // width: 100%;
+        // color: var(--popup-text-description-color);
+        padding: .5rem .15rem .25rem 0rem;
+        // display: flex;
+        // align-items: flex-start;
+        // justify-content: center;
+        // flex-direction: column;
+        gap: .25rem;
+        font-size: .525rem;
+        line-height: .75rem;
+
+        // .footer_api_description {
+
+        //     p {
+        //         // margin: 0;
+
+        //         a {
+        //             // color: var(--popup-text-description-color);
+        //         }
+        //     }
+        // }
+
+        // .footer_design_description {
+
+        //     p {
+        //         margin: 0;
+
+        //         a {
+        //             color: var(--popup-text-description-color);
+        //         }
+        //     }
+        // }
+
+        .footer_text_description {
+            // display: flex;
+            // align-items: flex-start;
+            // justify-content: center;
+            // flex-direction: column;
+            gap: .35rem;
+
+            .footer_text {
+                p {
+                    // margin: 0;
+                    letter-spacing: .01rem;
+                    word-spacing: .025rem;
+                    font-size: .525rem;
+                    // color: var(--popup-text-description-color);
+                }
+            }
+
+            .footer_icon_container {
+                // display: flex;
+                // align-items: center;
+                // justify-content: center;
+                gap: .5rem;
+
+                a {
+                    // display: flex;
+                    // align-items: center;
+                    // justify-content: center;
+                    width: 1rem;
+                    height: 1rem;
+                    padding: 0;
+                    // transition: all .2s ease-in-out;
+                    // text-decoration: none;
+
+                    i {
+                        // color: var(--extra-menu-icon-color);
+                        font-size: .775rem;
+                        // transition: all .2s ease;
+                    }
+
+                    &:hover {
+
+                        i {
+                            color: var(--extra-menu-icon-color);
+                            translate: 0 0;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+// Media query for very small screens (mobile)
+@media screen and (max-width: 500px) and (max-height: 400px) {
 
     // Footer content
     .footer_container {
