--- a/src/components/FooterDescription/_media.scss
+++ b/src/components/FooterDescription/_media.scss
@@ -358,3 +358,93 @@
         }
     }
 }
+
+
+// Media queries for small tablet content (square)
+@media screen and (min-height: 650px) and (min-width: 501px) and (max-width: 700px) {
+
+    // Footer content
+    .footer_container {
+        // width: 100%;
+        // color: var(--popup-text-description-color);
+        padding: 1rem .25rem .75rem 0rem;
+        // display: flex;
+        // align-items: flex-start;
+        // justify-content: center;
+        // flex-direction: column;
+        gap: .5rem;
+        font-size: .625rem;
+
+        // .footer_api_description {
+
+        //     p {
+        //         // margin: 0;
+
+        //         a {
+        //             // color: var(--popup-text-description-color);
+        //         }
+        //     }
+        // }
+
+        // .footer_design_description {
+
+        //     p {
+        //         margin: 0;
+
+        //         a {
+        //             color: var(--popup-text-description-color);
+        //         }
+        //     }
+        // }
+
+        .footer_text_description {
+            // display: flex;
+            // align-items: flex-start;
+            // justify-content: center;
+            // flex-direction: column;
+            gap: .65rem;
+
+            .footer_text {
+                p {
+                    // margin: 0;
+                    letter-spacing: .01rem;
+                    word-spacing: .025rem;
+                    font-size: .625rem;
+                    // color: var(--popup-text-description-color);
+                }
+            }
+
+            .footer_icon_container {
+                // display: flex;
+                // align-items: center;
+                // justify-content: center;
+                gap: .5rem;
+
+                a {
+                    // display: flex;
+                    // align-items: center;
+                    // justify-content: center;
+                    width: 1.2rem;
+                    height: 1.2rem;
+                    padding: 0;
+                    // transition: all .2s ease-in-out;
+                    // text-decoration: none;
+
+                    i {
+                        // color: var(--extra-menu-icon-color);
+                        font-size: .95rem;
+                        // transition: all .2s ease;
+                    }
+
+                    &:hover {
+
+                        i {
+                            color: var(--extra-menu-icon-color);
+                            translate: 0 0;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
