--- a/src/components/Navbar/_media.scss
+++ b/src/components/Navbar/_media.scss
@@ -160,7 +160,7 @@
             // font-weight: bolder;
             // font-family: 'Volkhov', serif;
             letter-spacing: -.1rem;
-            //margin-left: 4.4rem;
+            margin-left: 5.5rem;
         }
 
         .navbar_icons_container {
@@ -260,6 +260,52 @@
                     }
                 }
             }
+        }
+    }
+}
+
+
+// Media queries for small tablet content (square)
+@media screen and (min-height: 650px) and (min-width: 501px) and (max-width: 700px) {
+
+    // Navbar content
+    .navbar_container {
+        // color: var(--header-color);
+        // display: flex;
+        //justify-content: space-between;
+        // align-items: center;
+        // width: 100%;
+        // border-bottom: .01rem solid var(--header-border-color);
+        padding: .4rem 1rem;
+
+        .navbar_menu_container {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            font-size: 1.15rem;
+            // cursor: pointer;
+        }
+
+        .navbar_title {
+            margin: 0;
+            font-size: 1.65rem;
+            // font-weight: bolder;
+            // font-family: 'Volkhov', serif;
+            // letter-spacing: -.15rem;
+            margin-left: 4.4rem;
+        }
+
+        .navbar_icons_container {
+            // display: flex;
+            // align-items: center;
+            justify-content: flex-end;
+            width: fit-content;
+            gap: .85rem;
+            font-size: 1.5rem;
+
+            // .navbar_icon_container {
+            //     cursor: pointer;
+            // }
         }
     }
 }
