--- a/src/_media.scss
+++ b/src/_media.scss
@@ -783,7 +783,7 @@
 
 
 // Media queries for small tablet content (square)
-@media screen and (min-height: 650px) and (min-width: 501px) and (max-width: 700px) {
+@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 501px) and (max-width: 700px) {
 
     // Main content
     .main_container {
@@ -891,8 +891,8 @@
 
 
 // Media queries for tablet content (portrait)
-@media screen and (min-height: 651px) and (min-width: 701px) and (max-width: 1000px) {}
+@media screen and (min-height: 651px) and (max-height: 800px) and (min-width: 701px) and (max-width: 1000px) {}
 
 
 // Media queries for very wide screens content
-@media screen and (max-height: 750px) and (min-width: 1001px) {}
+@media screen and (max-height: 800px) and (min-width: 1001px) {}
