--- a/src/components/ExtraMenu/_media.scss
+++ b/src/components/ExtraMenu/_media.scss
@@ -618,7 +618,7 @@
 
 
 // Media queries for small tablet content (square)
-@media screen and (min-height: 650px) and (min-width: 501px) and (max-width: 700px) {
+@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 501px) and (max-width: 700px) {
 
     // Help Pop Up content
     .extramenu_popup_container {
@@ -765,5 +765,35 @@
         //     animation: slideOut .2s ease 0s;
         //     animation-fill-mode: forwards;
         // }
+    }
+}
+
+
+// Media queries for mobile high height square-ish screens
+@media screen and (min-height: 801px) and (min-width: 501px) and (max-width: 1201px) {
+
+    // Help Pop Up content
+    .extramenu_popup_container {
+        // position: absolute;
+        width: fit-content;
+        //height: 75%;
+        // height: fit-content;
+        // max-height: unset;
+        // top: 7%;
+        //left: 0%;
+        //width: 24.5%;
+        //height: 66%;
+        //height: fit-content;
+        //max-height: 66%;
+        // border: 1px solid var(--popup-border-color);
+        // background-color: var(--popup-bg-color);
+        // display: flex;
+        // align-items: center;
+        // flex-direction: column;
+        // justify-content: center;
+        // gap: 0rem;
+        // box-shadow: 3px 5px 5px var(--extra-menu-box-shadow-color);
+        // border-radius: .5rem;
+        // padding-top: 2rem;
     }
 }
