--- a/src/components/Navbar/_media.scss
+++ b/src/components/Navbar/_media.scss
@@ -266,7 +266,7 @@
 
 
 // Media queries for small tablet content (square)
-@media screen and (min-height: 650px) and (min-width: 501px) and (max-width: 700px) {
+@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 501px) and (max-width: 700px) {
 
     // Navbar content
     .navbar_container {
