--- a/src/components/StatsPopUp/_media.scss
+++ b/src/components/StatsPopUp/_media.scss
@@ -769,7 +769,7 @@
 
 
 // Media queries for small tablet content (square)
-@media screen and (min-height: 650px) and (min-width: 501px) and (max-width: 700px) {
+@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 501px) and (max-width: 700px) {
 
     // Stats Pop Up content
     .stats_popup_container {
@@ -952,6 +952,179 @@
 
         //     animation: slideOut .2s ease 0s;
         //     animation-fill-mode: forwards;
+        // }
+    }
+}
+
+
+// Media queries for mobile high height square-ish screens
+@media screen and (min-height: 801px) and (min-width: 501px) and (max-width: 1201px) {
+
+    // Stats Pop Up content
+    .stats_popup_container {
+        // position: absolute;
+        // top: unset;
+        // bottom: 0;
+        // left: 0;
+        // width: 100%;
+        //height: 75%;
+        //padding: 0rem 0;
+        //gap: 0;
+
+        width: 60%;
+        left: 20%;
+
+        height: fit-content;
+        // justify-content: center;
+        // gap: 2rem;
+        //padding: 0rem 0;
+        // border: 1px solid var(--popup-border-color);
+        // background-color: var(--popup-bg-color);
+        // display: flex;
+        // align-items: center;
+        // flex-direction: column;
+        //justify-content: space-evenly;
+        //justify-content: space-evenly;
+        //gap: 2rem;
+        // box-shadow: 0 0 10px 1000px var(--popup-box-shadow-color);
+        // border-radius: .5rem;
+
+        // @keyframes slideIn {
+        //     0% {
+        //         translate: 0 7.5%;
+        //         opacity: 0;
+        //     }
+
+        //     100% {
+        //         translate: 0 0;
+        //         opacity: 1;
+        //     }
+        // }
+
+        // animation: slideIn .2s ease 0s;
+
+        .stats_popup_stats_numbers {
+            // display: flex;
+            // flex-direction: column;
+            // align-items: center;
+            // justify-content: center;
+            // gap: 1rem;
+            // width: 100%;
+            // padding: 0 1rem;
+            // color: var(--keyboard-letter-text-color);
+    
+            // .stats_popup_stats_numbers_title {
+            //     color: var(--keyboard-letter-text-color);
+            //     text-transform: uppercase;
+            //     text-align: center;
+            //     font-weight: bold;
+            //     letter-spacing: .075rem;
+            // }
+    
+            .stats_numbers_row_container {
+                // display: flex;
+                // align-items: flex-start;
+                // justify-content: center;
+                // width: 100%;
+                gap: 1.5rem;
+    
+                .singular_stat_container {
+                    // display: flex;
+                    // flex-direction: column;
+                    // align-items: center;
+                    // justify-content: center;
+                    // width: 15%;
+    
+    
+                    .singular_stat_number{
+                        font-size: 1.65rem;
+                        // font-weight: 400;
+                        // margin: 0;
+                    }
+    
+                    .singular_stat_text {
+                        // margin: 0;
+                        // text-align: center;
+                        font-size: .7rem;
+                        line-height: .9rem;
+                    }
+                }
+            }
+        }
+    
+        // .stats_popup_stats_graph {
+        //     display: flex;
+        //     flex-direction: column;
+        //     align-items: center;
+        //     justify-content: center;
+        //     width: 100%;
+        //     gap: 1rem;
+        //     padding: 0 1rem;
+        //     color: var(--keyboard-letter-text-color);
+    
+        //     .stats_popup_stats_graph_title {
+        //         color: var(--keyboard-letter-text-color);
+        //         text-transform: uppercase;
+        //         text-align: center;
+        //         font-weight: bold;
+        //         letter-spacing: .075rem;
+        //     }
+    
+        //     .stats_graph_column_container {
+        //         display: flex;
+        //         flex-direction: column;
+        //         //align-items: center;
+        //         justify-content: space-evenly;
+        //         gap: .225rem;
+        //         width: 100%;
+    
+        //         .singular_graph_line_container {
+        //             display: flex;
+        //             align-items: center;
+        //             justify-content: flex-start;
+        //             gap: .3rem;
+        //             width: 100%;
+    
+        //             .singular_graph_number {
+        //                 margin: 0;
+        //                 width: 5%;
+        //                 display: flex;
+        //                 align-items: center;
+        //                 justify-content: flex-end;
+        //                 font-weight: bold;
+        //                 font-size: .75rem;
+        //                 line-height: 1.15rem;
+        //                 letter-spacing: .1rem;
+        //             }
+    
+        //             .singular_graph_bar {
+        //                 display: flex;
+        //                 justify-content: flex-end;
+        //                 padding-right: .15rem;
+        //                 background-color: var(--tile-wrong-color);
+    
+        //                 p {
+        //                     margin: 0;
+        //                     color: var(--tile-text-color);
+        //                     padding-right: .35rem;
+        //                     font-weight: bold;
+        //                     font-size: .75rem;
+        //                     line-height: 1.15rem;
+        //                 }
+        //             }
+        //         }
+        //     }
+        // }
+    
+        // .stats_popup_exit_button {
+        //     position: absolute;
+        //     top: 3.15%;
+        //     right: 3%;
+        //     font-size: 1.3rem;
+        //     background-color: var(--popup-bg-color);
+        //     color: var(--keyboard-letter-text-color);
+        //     border: none;
+        //     cursor: pointer;
         // }
     }
 }
