--- a/src/_media.scss
+++ b/src/_media.scss
@@ -891,7 +891,111 @@
 
 
 // Media queries for tablet content (portrait)
-@media screen and (min-height: 651px) and (max-height: 800px) and (min-width: 701px) and (max-width: 1000px) {}
+@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px) and (max-width: 1000px) {
+
+    // Main content
+    .main_container {
+        // position: relative;
+        // width: 100%;
+        // height: 100%;
+
+        .game_container {
+            // height: 100%;
+            // display: flex;
+            // flex-direction: column;
+            // align-items: center;
+            // justify-content: space-between;
+            //gap: 2.75rem;
+            width: 100%;
+            padding: .2rem;
+
+            .gameboard_container {
+                // display: flex;
+                // flex-direction: column;
+                // align-items: center;
+                // justify-content: center;
+                gap: .3rem;
+                width: 100%;
+                //padding-top: 2.75rem;
+                padding: .25rem;
+
+                padding-top: 1.35rem;
+            }
+
+            .keyboard_container {
+                // display: flex;
+                // flex-direction: column;
+                // align-items: center;
+                gap: .325rem;
+                width: 100%;
+                // padding-bottom: .5rem;
+            }
+        }
+
+
+        .notification_container {
+            // position: absolute;
+            top: 1%;
+            // left: 50%;
+            // translate: -50% 0;
+            padding: .45rem .75rem;
+            // background-color: var(--notification-bg-color);
+            // color: var(--notification-color);
+            // box-shadow: 0 0 .5rem var(--notification-box-shadow-color);
+            // border-radius: .25rem;
+            //width: fit-content;
+            font-size: .9rem;
+            line-height: .9rem;
+            text-align: center;
+            letter-spacing: .005rem;
+            // z-index: 4;
+
+            // @keyframes popInAndOut {
+            //     0% {
+            //         opacity: .25;
+            //     }
+
+            //     25% {
+            //         opacity: 1;
+            //     }
+
+            //     75% {
+            //         opacity: 1;
+            //     }
+
+            //     100% {
+            //         opacity: 0;
+            //     }
+            // }
+
+            // animation: popInAndOut 3s ease 0s;
+            // animation-fill-mode: forwards;
+
+
+            // &.notification_container_invisible {
+            //     display: none;
+            // }
+        }
+
+        .reset_game_button {
+            // position: absolute;
+            //top: 67.5%;
+            //right: 50%;
+            top: 67%;
+            right: 3.5%;
+            //translate: 50% 0;
+            // opacity: 0;
+            // background-color: var(--tile-present-color);
+            // color: var(--popup-bg-color);
+            // border: 0.05rem solid var(--popup-text-description-color);
+            font-size: 0.875rem;
+            // border-radius: 0.25rem;
+            // font-weight: bold;
+            padding: 0.4rem 1.25rem;
+            // cursor: pointer;
+        }
+    }
+}
 
 
 // Media queries for very wide screens content
