--- a/src/components/KeyboardRow/_media.scss
+++ b/src/components/KeyboardRow/_media.scss
@@ -704,3 +704,122 @@
         }
     }
 }
+
+
+// Media queries for tablet content (portrait)
+@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px) and (max-width: 1000px) {
+
+    // Keyboard content
+    .keyboard_row {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        gap: .4rem;
+        //height: 100%;
+        width: 100%;
+
+        .keyboard_letter_tile {
+            margin: 0;
+            padding: 0;
+            width: 2.8rem;
+            height: 2.775rem;
+            //height: 100%;
+            // display: flex;
+            // align-items: center;
+            // justify-content: center;
+            // background-color: var(--keyboard-letter-tile-bg-color);
+            // border-radius: .25rem;
+            // text-transform: uppercase;
+            font-size: .825rem;
+            // font-weight: bold;
+            // cursor: pointer;
+            // position: relative;
+            // color: var(--keyboard-letter-text-color);
+
+            // .keyboard_letter_text {
+            //     margin: 0;
+            // }
+
+            // &.keyboard_letter_tile_green {
+            //     @keyframes turnToGreen {
+            //         0% {
+            //             background-color: var(--keyboard-letter-tile-bg-color);
+            //         }
+
+            //         100% {
+            //             color: var(--keyboard-letter-checked-color);
+            //             background-color: var(--tile-correct-color);
+            //         }
+            //     }
+
+            //     animation: turnToGreen .5s ease-in-out;
+            //     animation-fill-mode: forwards;
+            // }
+
+            // &.keyboard_letter_tile_yellow {
+            //     @keyframes turnToYellow {
+            //         0% {
+            //             background-color: var(--keyboard-letter-tile-bg-color);
+            //         }
+
+            //         100% {
+            //             color: var(--keyboard-letter-checked-color);
+            //             background-color: var(--tile-present-color);
+            //         }
+            //     }
+
+            //     animation: turnToYellow .5s ease-in-out;
+            //     animation-fill-mode: forwards;
+            // }
+
+            // &.keyboard_letter_tile_grey {
+            //     @keyframes turnToGrey {
+            //         0% {
+            //             background-color: var(--keyboard-letter-tile-bg-color);
+            //         }
+
+            //         100% {
+            //             color: var(--keyboard-letter-checked-color);
+            //             background-color: var(--tile-wrong-color);
+            //         }
+            //     }
+
+            //     animation: turnToGrey .5s ease-in-out;
+            //     animation-fill-mode: forwards;
+            // }
+
+            &.keyboard_letter_tile_enter {
+                width: 5rem;
+                // color: var(--keyboard-letter-text-color);
+                // letter-spacing: .05rem;
+                font-size: .8rem;
+            }
+
+            &.keyboard_letter_tile_backspace {
+                width: 5.25rem;
+                color: var(--keyboard-letter-text-color);
+                font-size: 1.15rem;
+            }
+
+            // &.keyboard_letter_tile_highlight {
+            //     @keyframes scaleUpAndDown {
+            //         0% {
+            //             scale: 1;
+            //         }
+
+            //         50% {
+            //             scale: 1.1;
+            //             background-color: var(--keyboard-letter-highlight-color);
+            //         }
+
+            //         100% {
+            //             scale: 1;
+            //         }
+            //     }
+
+            //     animation: scaleUpAndDown 1s ease-in-out 0s alternate-reverse infinite;
+            // }
+        }
+    }
+}
