--- a/src/components/Navbar/_media.scss
+++ b/src/components/Navbar/_media.scss
@@ -309,3 +309,49 @@
         }
     }
 }
+
+
+// Media queries for tablet content (portrait)
+@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px) and (max-width: 1000px) {
+
+    // Navbar content
+    .navbar_container {
+        // color: var(--header-color);
+        // display: flex;
+        //justify-content: space-between;
+        // align-items: center;
+        // width: 100%;
+        // border-bottom: .01rem solid var(--header-border-color);
+        padding: .45rem 1.1rem;
+
+        .navbar_menu_container {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            font-size: 1.25rem;
+            // cursor: pointer;
+        }
+
+        .navbar_title {
+            margin: 0;
+            font-size: 1.75rem;
+            // font-weight: bolder;
+            // font-family: 'Volkhov', serif;
+            // letter-spacing: -.15rem;
+            margin-left: 4.4rem;
+        }
+
+        .navbar_icons_container {
+            // display: flex;
+            // align-items: center;
+            justify-content: flex-end;
+            width: fit-content;
+            gap: 1rem;
+            font-size: 1.55rem;
+
+            // .navbar_icon_container {
+            //     cursor: pointer;
+            // }
+        }
+    }
+}
