--- a/src/components/Line/_media.scss
+++ b/src/components/Line/_media.scss
@@ -736,7 +736,7 @@
 
 
 // Media queries for mobile content (landscape low height)
-@media screen and (max-height: 351px) and (min-width: 500px) and (max-width: 1000px) {
+@media screen and (max-height: 351px) and (min-width: 500px) /* and (max-width: 1000px)*/ {
 
      // Gameboard content
      .tile_row {
@@ -773,7 +773,7 @@
 
 
 // Media queries for mobile content (landscape)
-@media screen and (min-height: 351px) and (max-height: 650px) and (min-width: 500px) and (max-width: 1000px) {
+@media screen and (min-height: 351px) and (max-height: 650px) and (min-width: 500px) /* and (max-width: 1000px)*/ {
 
     // Gameboard content
     .tile_row {
@@ -1056,7 +1056,7 @@
 
 
 // Media queries for tablet content (portrait)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px) and (max-width: 1000px) {
+@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px) /* and (max-width: 1000px)*/ {
 
     // Gameboard content
     .tile_row {
