--- a/src/components/Navbar/_media.scss
+++ b/src/components/Navbar/_media.scss
@@ -137,7 +137,7 @@
 
 
 // Media queries for mobile content (landscape)
-@media screen and (max-height: 650px) and (min-width: 500px) and (max-width: 1000px) {
+@media screen and (max-height: 650px) and (min-width: 500px) /* and (max-width: 1000px)*/ {
 
     // Navbar content
     .navbar_container {
@@ -312,7 +312,7 @@
 
 
 // Media queries for tablet content (portrait)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px) and (max-width: 1000px) {
+@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px)/* and (max-width: 1000px)*/ {
 
     // Navbar content
     .navbar_container {
