--- a/src/components/StatsPopUp/_media.scss
+++ b/src/components/StatsPopUp/_media.scss
@@ -567,7 +567,7 @@
 
 
 // Media queries for mobile content (landscape)
-@media screen and (max-height: 650px) and (min-width: 500px) and (max-width: 1000px) {
+@media screen and (max-height: 650px) and (min-width: 500px) /* and (max-width: 1000px)*/ {
 
     // Stats Pop Up content
     .stats_popup_container {
@@ -958,7 +958,7 @@
 
 
 // Media queries for tablet content (portrait)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px) and (max-width: 1000px) {
+@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px) /* and (max-width: 1000px)*/ {
 
     // Stats Pop Up content
     .stats_popup_container {
