Remove unnecessary commented code
- Remove unnecessary commented code
- Improve loading container styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -221,6 +221,8 @@ body {
 
 
 .main_container_loading {
+    margin: auto;
+    
     i {
         font-size: 5rem;
         color: var(--tile-text-color);
