Add loading to word checking
- Add functionality to show a loading spinner when the process of checking guessed words in the dictionary takes more than 0.1 seconds

--- a/src/components/KeyboardRow/KeyboardRow.module.scss
+++ b/src/components/KeyboardRow/KeyboardRow.module.scss
@@ -78,6 +78,10 @@
             color: var(--keyboard-letter-text-color);
             letter-spacing: .05rem;
             font-size: .8rem;
+
+            i {
+                font-size: 1.5rem;
+            }
         }
 
         &.keyboard_letter_tile_backspace {
