--- a/src/components/KeyboardRow/_media.scss
+++ b/src/components/KeyboardRow/_media.scss
@@ -19,6 +19,10 @@
             &.keyboard_letter_tile_enter {
                 width: 2.8rem;
                 font-size: .525rem;
+
+                i {
+                    font-size: 1rem;
+                }
             }
 
             &.keyboard_letter_tile_backspace {
@@ -52,6 +56,10 @@
             &.keyboard_letter_tile_enter {
                 width: 2.8rem;
                 font-size: .525rem;
+
+                i {
+                    font-size: .85rem;
+                }
             }
 
             &.keyboard_letter_tile_backspace {
@@ -85,6 +93,10 @@
             &.keyboard_letter_tile_enter {
                 width: 3.25rem;
                 font-size: .435rem;
+
+                i {
+                    font-size: .75rem;
+                }
             }
 
             &.keyboard_letter_tile_backspace {
@@ -115,6 +127,10 @@
             &.keyboard_letter_tile_enter {
                 width: 4.25rem;
                 font-size: .6rem;
+
+                i {
+                    font-size: .8rem;
+                }
             }
 
             &.keyboard_letter_tile_backspace {
@@ -144,6 +160,10 @@
             &.keyboard_letter_tile_enter {
                 width: 4.5rem;
                 font-size: .65rem;
+
+                i {
+                    font-size: 1rem;
+                }
             }
 
             &.keyboard_letter_tile_backspace {
@@ -176,6 +196,10 @@
             &.keyboard_letter_tile_enter {
                 width: 4.25rem;
                 font-size: .725rem;
+
+                i {
+                    font-size: 1.2rem;
+                }
             }
 
             &.keyboard_letter_tile_backspace {
@@ -209,6 +233,10 @@
             &.keyboard_letter_tile_enter {
                 width: 5rem;
                 font-size: .8rem;
+
+                i {
+                    font-size: 1.4rem;
+                }
             }
 
             &.keyboard_letter_tile_backspace {
